# VaultKey

./: .dockerignore  .gitignore  .npmrc  Anchor.toml  Cargo.toml  DEPLOY_BACKEND.md  Dockerfile.vault-sbf  README.md  package-lock.json  package.json  rust-toolchain.toml  tailwind.config.ts  tsconfig.backend.json  tsconfig.base.json  tsconfig.json  tsconfig.tests.json
.cursor/rules/: vaultkey-project-bible.mdc
.github/workflows/: build-vault-sbf.yml
.initia/: submission.json
app/: globals.css  layout.tsx  page.tsx  providers.tsx
app/about/: page.tsx
app/admin/: page.tsx
app/admin/components/: ComplianceFeed.tsx  TravelRuleLog.tsx  VaultMetrics.tsx  WhitelistPanel.tsx
app/components/: AppShell.tsx
app/investor/: page.tsx
app/investor/components/: DepositForm.tsx  KycStatusBadge.tsx  TransactionHistory.tsx  VaultStats.tsx  WalletConnectButton.tsx  WithdrawForm.tsx
app/lib/: anchor.ts  backend.ts  kyc.ts  mock-data.ts  vault.ts  vaultIx.ts  vaultStateRaw.ts
backend/: index.ts  kyt-scorer.ts  listener.ts  vasp-mock.ts
docs/: SBF_E0152.md
idl/: kyc_registry.json  transfer_hook.json  vault.json
programs/kyc_registry/: Cargo.toml
programs/kyc_registry/src/: lib.rs
programs/transfer_hook/: Cargo.toml
programs/transfer_hook/src/: lib.rs
programs/vault/: Cargo.toml
programs/vault/src/: errors.rs  events.rs  lib.rs  state.rs
scripts/: anchor-provider.ts  build-vault-sbf.sh  deploy.sh  devnet-check.ts  init-vault.ts  issue-kyc.ts  kyc-registry-program.ts  revoke-kyc.ts  seed-devnet.ts  setup-vkusdc-mint.ts  toolchain-check.sh  transfer-hook-program.ts  vault-program.ts
tests/: kyc_registry.test.ts  transfer_hook.test.ts  vault.test.ts
