[workspace]
members = [
    "programs/kyc_registry",
    "programs/transfer_hook",
    "programs/vault",
]
resolver = "2"

# Aggressive LTO + single codegen unit can confuse `cargo-build-sbf` on some
# Solana platform-tools versions (E0152 duplicate `core` / `sized`). Keep
# release deps normal; program crates still optimize well enough for devnet.
[profile.release]
overflow-checks = true

# If `cargo update` bumps `blake3` to ≥1.8, Docker / older Agave Cargo may fail to
# parse its manifest (`edition2024`). Restore with:
#   cargo update -p blake3 --precise 1.5.5

