[package]
name = "kyc_registry"
version = "0.1.0"
description = "VaultKey KYC registry"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kyc_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", default-features = false, features = ["init-if-needed"] }

