[package]
name = "transfer_hook"
version = "0.1.0"
description = "VaultKey transfer hook program enforcing KYC checks at the token layer"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[features]
no-entrypoint = []
idl-build = ["anchor-lang/idl-build"]
default = []

[dependencies]
anchor-lang = "0.30.1"
anchor-spl = { version = "0.30.1", features = ["token_2022"] }

